修改鼠标指针 调整返回顶部在左边

--- a/themes/next/source/css/_custom/custom.styl
+++ b/themes/next/source/css/_custom/custom.styl
@@ -1,5 +1,21 @@
 // Custom styles.
-
+body {
+   cursor: url(../images/funny.png),auto;
+}
+a:hover {
+   cursor: url(../images/sinister.png), auto;
+}
+div.headband{
+	height: 2px;
+	background: -webkit-linear-gradient(left, red, orange, yellow, green, blue, indigo, violet); /* Safari 5.1 - 6.0 */
+    background: -o-linear-gradient(left, red, orange, yellow, green, blue, indigo, violet); /* Opera 11.1 - 12.0 */
+    background: -moz-linear-gradient(left, red, orange, yellow, green, blue, indigo, violet); /* Firefox 3.6 - 15 */
+    background: linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet); /* 标准的语法（必须放在最后） */
+}
+div.back-to-top{
+    color: #fff;
+	background: #222;
+}
 .post-block {
     width: 95%;
     margin: 0 auto;
@@ -33,6 +49,3 @@
 .with-love {
     color: rgb(255, 113, 168);
 }
-
-//来必力评论 底部版权
-#container #footer div.livere-com{display: none;}
