--- a/themes/next/source/css/_custom/custom.styl
+++ b/themes/next/source/css/_custom/custom.styl
@@ -1,11 +1,96 @@
 // Custom styles.
+/*.cssLoading{
+	width: 60px;
+	height: 60px;
+	margin: 0 auto;
+	margin-top: 20%;
+	position: relative;
+	-webkit-animation: load 3s linear infinite;
+}
+.cssLoading div{
+	width: 100%;
+	height: 100%;
+	position: absolute;
+}
+.cssLoading span{
+	display: inline-block;
+	width: 20px;
+	height: 20px;
+	border-radius: 50%;
+	background: #99CC66;
+	position: absolute;
+	left: 50%;
+	margin-top: -10px;
+	margin-left: -10px;
+	-webkit-animation: changeBgColor 3s ease infinite;
+}
+@-webkit-keyframes load{
+	0%{
+		-webkit-transform: rotate(0deg);
+	}
+	33.3%{
+		-webkit-transform: rotate(120deg);
+	}
+	66.6%{
+		-webkit-transform: rotate(240deg);
+	}
+	100%{
+		-webkit-transform: rotate(360deg);
+	}
+}
+@-webkit-keyframes changeBgColor{
+	0%,100%{
+		background: #99CC66;
+	}
+	33.3%{
+		background: #FFFF66;
+	}
+	66.6%{
+		background: #FF6666;
+	}
+}
+.cssLoading div:nth-child(2){
+	-webkit-transform: rotate(120deg);
+}
+.cssLoading div:nth-child(3){
+	-webkit-transform: rotate(240deg);
+}
+.cssLoading div:nth-child(2) span{
+	-webkit-animation-delay: 1s;
+}
+.cssLoading div:nth-child(3) span{
+	-webkit-animation-delay: 2s;
+}*/
+
+
+
 body {
-   cursor: url(../images/funny.png),auto;
+    cursor: url(../images/funny.png),auto;
+	background:url(http://p5tq1m3a9.bkt.clouddn.com/hexo_blog/body-bg.jpg);
+    background-size:cover;
+	background-repeat:no-repeat;
+	background-attachment:fixed;
+	background-position:center;
 }
 a:hover {
    cursor: url(../images/sinister.png), auto;
 }
 
+.body-bg{
+    background:url(../images/bg.jpg);
+    background-size:cover;
+	background-repeat:no-repeat;
+	background-attachment:fixed;
+	background-position:center;
+}
+
+.js-open {
+    display: block!important
+}
+
+.js-hidden {
+    display:none!important;
+}
 
 ::-webkit-scrollbar {
     -webkit-appearance:none;
@@ -30,11 +115,6 @@ a:hover {
 ::-webkit-scrollbar-thumb:active {
     background-color: #838383
 }
-
-::selection {
-    background: #d7dbf0;
-}
-
 
 div.headband{
 	height: 2px;
@@ -67,8 +147,9 @@ div.back-to-top{
     border-radius: 0px;
   }
   
-  .content-wrap,.header-inner,.sidebar-inner{
+  .content-wrap,.header-inner,.sidebar-inner,.sidebar{
 	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.4), 0 0 30px rgba(10, 10, 0, 0.1) inset;
+	background: rgba(255,255,255,0.85) none repeat scroll !important;
   }
 
 // 自定义页脚跳动的心样式
