--- a/themes/next/source/css/_custom/custom.styl
+++ b/themes/next/source/css/_custom/custom.styl
@@ -66,7 +66,7 @@
 
 body {
     cursor: url(../images/funny.png),auto;
-	background:url(http://p5tq1m3a9.bkt.clouddn.com/hexo_blog/body-bg.jpg);
+	background:url(http://p5tq1m3a9.bkt.clouddn.com/hexo_blog/static/body-bg.jpg);
     background-size:cover;
 	background-repeat:no-repeat;
 	background-attachment:fixed;
@@ -77,7 +77,7 @@ a:hover {
 }
 
 .body-bg{
-    background:url(../images/bg.jpg);
+    background:url(http://p5tq1m3a9.bkt.clouddn.com/hexo_blog/static/body-bg.jpg);
     background-size:cover;
 	background-repeat:no-repeat;
 	background-attachment:fixed;
