添加 闲聊么

--- a/themes/next/source/css/_custom/custom.styl
+++ b/themes/next/source/css/_custom/custom.styl
@@ -238,3 +238,7 @@ div.back-to-top{
 .waveAnimation .waveBottom {
     animation: move_wave 15s linear infinite;
 }            
+
+.back-to-top.back-to-top-on {
+  bottom: 90px;
+}
