--- a/themes/next/source/css/_custom/custom.styl
+++ b/themes/next/source/css/_custom/custom.styl
@@ -2,7 +2,7 @@
 
 body {
     cursor: url(../images/funny.png),auto;
-	background:url(http://p5tq1m3a9.bkt.clouddn.com/hexo_blog/static/body-bg.jpg);
+	background:url(https://raw.githubusercontent.com/xqmGitHub/xqmgithub.github.io/img/hexo/body-bg.jpg);
     background-size:cover;
 	background-repeat:no-repeat;
 	background-attachment:fixed;
@@ -13,7 +13,7 @@ a:hover {
 }
 
 .body-bg{
-    background:url(http://p5tq1m3a9.bkt.clouddn.com/hexo_blog/static/body-bg.jpg);
+    background:url(https://raw.githubusercontent.com/xqmGitHub/xqmgithub.github.io/img/hexo/body-bg.jpg);
     background-size:cover;
 	background-repeat:no-repeat;
 	background-attachment:fixed;
