修改头部彩条样式

--- a/themes/next/source/css/_custom/custom.styl
+++ b/themes/next/source/css/_custom/custom.styl
@@ -53,6 +53,9 @@ a:hover {
 }
 //头部彩条
 div.headband{
+    position: fixed;
+    width: 100%;
+    z-index: 9;
 	height: 2px;
 	background: -webkit-linear-gradient(left, red, orange, yellow, green, blue, indigo, violet); /* Safari 5.1 - 6.0 */
     background: -o-linear-gradient(left, red, orange, yellow, green, blue, indigo, violet); /* Opera 11.1 - 12.0 */
