--- a/themes/next/source/css/_schemes/Pisces/_menu.styl
+++ b/themes/next/source/css/_schemes/Pisces/_menu.styl
@@ -26,7 +26,7 @@
     the-transition();
 
     &:hover {
-      background: #f9f9f9;
+      background: #f9f9f99e;
       border-bottom-color: white;
     }
   }
