--- a/themes/next/source/css/_common/components/buttons.styl
+++ b/themes/next/source/css/_common/components/buttons.styl
@@ -3,7 +3,7 @@
   padding: 0 20px;
   font-size: $btn-default-font-size;
   color: $btn-default-color;
-  background: $btn-default-bg;
+  // background: $btn-default-bg;
   border: $btn-default-border-width solid $btn-default-border-color;
   text-decoration: none;
   border-radius: $btn-default-radius;
