--- a/themes/next/source/css/_common/components/highlight/theme.styl
+++ b/themes/next/source/css/_common/components/highlight/theme.styl
@@ -90,3 +90,21 @@ if $highlight_theme == "night bright"
     color: lighten($highlight-background, 40%),
     bg-color: lighten($highlight-background, 16%)
   }
+
+if $highlight_theme == "custom"
+  $highlight-background   = rgba(255, 255, 255, 0.1) none repeat scroll!important;
+  $highlight-current-line = #efefef
+  $highlight-selection    = #d6d6d6
+  $highlight-foreground   = #4d4d4c
+  $highlight-comment      = #8e908c
+  $highlight-red          = #c82829
+  $highlight-orange       = #f5871f
+  $highlight-yellow       = #eab700
+  $highlight-green        = #718c00
+  $highlight-aqua         = #3e999f
+  $highlight-blue         = #4271ae
+  $highlight-purple       = #8959a8
+  $highlight-gutter       = {
+    color: #869194,
+    bg-color: #eff2f3
+  }
