--- a/themes/next/source/css/_common/components/sidebar/site-state.styl
+++ b/themes/next/source/css/_common/components/sidebar/site-state.styl
@@ -8,7 +8,8 @@
 .site-state-item {
   display: inline-block;
   padding: 0 15px;
-  border-left: 1px solid $site-state-item-border-color;
+  // border-left: 1px solid $site-state-item-border-color;
+  border-left: 1px solid rgba(255, 255, 255, 0.3);
 
   &:first-child { border-left: none; }
 
