修改当行代码片段背景透明度 添加忽略文件

--- a/themes/next/source/css/_variables/base.styl
+++ b/themes/next/source/css/_variables/base.styl
@@ -148,7 +148,7 @@ $code-font-size                 = 13px
 $code-font-size                 = unit(hexo-config('font.codes.size'), px) if hexo-config('font.codes.size') is a 'unit'
 $code-border-radius             = 3px
 $code-foreground                = $black-light
-$code-background                = $gainsboro
+$code-background                = #eeeeee7a
 
 
 
