替换背景、鼠标图片

--- a/themes/next/source/css/_custom/custom.styl
+++ b/themes/next/source/css/_custom/custom.styl
@@ -1,21 +1,19 @@
 // Custom styles.
 
 body {
-    cursor: url(../images/funny.png),auto;
-    // background:url(https://raw.githubusercontent.com/xqmGitHub/xqmgithub.github.io/img/hexo/body-bg.jpg);
-    background:url(https://raw.githubusercontent.com/xqmGitHub/xqmgithub.github.io/img/hexo/blog-bg.jpg);
+    cursor: url(../images/normal.cur),auto;
+    background:url(../images/bg.png);
     background-size:cover;
     background-repeat:no-repeat;
     background-attachment:fixed;
     background-position:center;
 }
 a:hover {
-   cursor: url(../images/sinister.png), auto;
+   cursor: url(../images/link.cur), auto;
 }
 
 .body-bg{
-    // background:url(https://raw.githubusercontent.com/xqmGitHub/xqmgithub.github.io/img/hexo/body-bg.jpg);
-    background:url(https://raw.githubusercontent.com/xqmGitHub/xqmgithub.github.io/img/hexo/blog-bg.jpg);
+    background:url(../images/bg.png);
     background-size:cover;
     background-repeat:no-repeat;
     background-attachment:fixed;
