代码段、滚动条样式

--- a/themes/next/source/css/_common/components/highlight/highlight.styl
+++ b/themes/next/source/css/_common/components/highlight/highlight.styl
@@ -85,7 +85,7 @@ pre {
     width: 100%
     padding-left: 10px
     padding-right: 10px
-    background-color: $highlight-background
+    background: rgba(255, 255, 255, 0) none repeat scroll!important;
   }
 
   .line { height: 20px; }
