--- a/themes/next/source/css/_custom/custom.styl
+++ b/themes/next/source/css/_custom/custom.styl
@@ -39,10 +39,10 @@ a:hover {
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color:#b6b6b6;
+    background-color:#cccccc;
     border:1px solid #fff;
     border-radius:10px;
-	  background-image: -webkit-gradient(linear, left top, left bottom,color-stop(0, #f1ccb8), color-stop(0.1, #f1f1b8), color-stop(0.2, #b8f1ed), color-stop(0.3, #b8f1cc), color-stop(0.4, #CDDC39), color-stop(0.5, #e7dac9), color-stop(0.6, #FFC107), color-stop(0.7, #dcff93), color-stop(0.8, #b7d28d), color-stop(0.9, #f2debd));
+	  //background-image: -webkit-gradient(linear, left top, left bottom,color-stop(0, #f1ccb8), color-stop(0.1, #f1f1b8), color-stop(0.2, #b8f1ed), color-stop(0.3, #b8f1cc), color-stop(0.4, #CDDC39), color-stop(0.5, #e7dac9), color-stop(0.6, #FFC107), color-stop(0.7, #dcff93), color-stop(0.8, #b7d28d), color-stop(0.9, #f2debd));
 }
 
 ::-webkit-scrollbar-thumb:hover {
